# ai-sheet

./: .env.example  .gitignore  AGENT.md  DESIGN.md  PRODUCT.md  README.md  USER-GUIDE.md  index.html  landing-page.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  动态提示词.md
.pi/: AGENTS.md  SYSTEM.md
docs/: HANDOFF.md  OpenAgentSDK集成开发.md  PROTOCOL.md  multi-turn-conversation-design.md  pi-ai-best-practices.md  precious-snuggling-avalanche.md  upgrade-enhancements-summary.md  upgrade-plan-additions.md  upgrade-plan-tauri-react.md  upgrade-summary.md
src/: App.tsx  main.tsx
src-agent/: build.mjs  package-lock.json  package.json  test-agent.mjs  test-llm.mjs  tsconfig.json  tsconfig.tsbuildinfo
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/seeds/: formula_generation.md  prompt_generation.md
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  excel.rs  formula_cache.rs  llm.rs  mod.rs  pinned_formula.rs  prompt.rs  sidecar.rs  skill.rs  system.rs
src-tauri/src/db/: formula_cache_repo.rs  migrations.rs  mod.rs  models_repo.rs  pinned_formula_repo.rs  prompts_repo.rs  settings_repo.rs
src-tauri/src/models/: agent.rs  config.rs  excel.rs  formula_cache.rs  mod.rs  pinned_formula.rs  prompt.rs  skill.rs
src-tauri/src/services/: bridge_server.rs  config_service.rs  excel_service.rs  mod.rs  sidecar_manager.rs
tasks/: REVIEW-SUMMARY.md  completion-report.md  enhancement-verification.md  lessons.md  review-plan.md  (+2 more)
(+306 files in other folders)
