[package]
name = "ai-sheet"
version = "0.1.0"
description = "AI-Sheet desktop app"
authors = ["AI-Sheet"]
edition = "2021"

[lib]
name = "ai_sheet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
calamine = { version = "0.26", features = ["dates"] }
chrono = { version = "0.4", features = ["serde"] }
rust_xlsxwriter = "0.77"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "io-std", "net", "process", "sync", "time"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
